objects/User__x.object
<CustomObject>
    <externalDataSource>TSOrg_C2S_TSTask</externalDataSource>
    <externalName>User</externalName>
    <fields>
        <fullName>AboutMe__c</fullName>
        <externalDeveloperName>AboutMe</externalDeveloperName>
        <label>About Me</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <externalDeveloperName>Address</externalDeveloperName>
        <label>Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <externalDeveloperName>Alias</externalDeveloperName>
        <label>Alias</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BadgeText__c</fullName>
        <externalDeveloperName>BadgeText</externalDeveloperName>
        <label>User Photo badge text overlay</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BannerPhotoUrl__c</fullName>
        <externalDeveloperName>BannerPhotoUrl</externalDeveloperName>
        <label>Url for banner photo</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CallCenterId__c</fullName>
        <externalDeveloperName>CallCenterId</externalDeveloperName>
        <label>Call Center ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <externalDeveloperName>City</externalDeveloperName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityNickname__c</fullName>
        <externalDeveloperName>CommunityNickname</externalDeveloperName>
        <label>Nickname</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <externalDeveloperName>CompanyName</externalDeveloperName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <externalDeveloperName>ContactId</externalDeveloperName>
        <label>Contact ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <externalDeveloperName>Country</externalDeveloperName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deactivated_Date_c__c</fullName>
        <externalDeveloperName>Deactivated_Date__c</externalDeveloperName>
        <label>Deactivated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DefaultCurrencyIsoCode__c</fullName>
        <externalDeveloperName>DefaultCurrencyIsoCode</externalDeveloperName>
        <label>Default Currency ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>ATS</fullName>
                </value>
                <value>
                    <fullName>AZN</fullName>
                </value>
                <value>
                    <fullName>BSD</fullName>
                </value>
                <value>
                    <fullName>BHD</fullName>
                </value>
                <value>
                    <fullName>BDT</fullName>
                </value>
                <value>
                    <fullName>BBD</fullName>
                </value>
                <value>
                    <fullName>BYR</fullName>
                </value>
                <value>
                    <fullName>BEF</fullName>
                </value>
                <value>
                    <fullName>BZD</fullName>
                </value>
                <value>
                    <fullName>BOB</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>BND</fullName>
                </value>
                <value>
                    <fullName>BGN</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>BAM</fullName>
                </value>
                <value>
                    <fullName>CRC</fullName>
                </value>
                <value>
                    <fullName>CYP</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>DOP</fullName>
                </value>
                <value>
                    <fullName>NLG</fullName>
                </value>
                <value>
                    <fullName>XCD</fullName>
                </value>
                <value>
                    <fullName>EGP</fullName>
                </value>
                <value>
                    <fullName>SVC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefaultGroupNotificationFrequency__c</fullName>
        <externalDeveloperName>DefaultGroupNotificationFrequency</externalDeveloperName>
        <label>Default Notification Frequency when Join</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DelegatedApproverId__c</fullName>
        <externalDeveloperName>DelegatedApproverId</externalDeveloperName>
        <label>Delegated Approver ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <externalDeveloperName>Department</externalDeveloperName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DigestFrequency__c</fullName>
        <externalDeveloperName>DigestFrequency</externalDeveloperName>
        <label>Chatter Email Highlights Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <externalDeveloperName>Division</externalDeveloperName>
        <label>Division</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailEncodingKey__c</fullName>
        <externalDeveloperName>EmailEncodingKey</externalDeveloperName>
        <label>Email Encoding</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UTF-8</fullName>
                </value>
                <value>
                    <fullName>ISO-8859-1</fullName>
                </value>
                <value>
                    <fullName>Shift_JIS</fullName>
                </value>
                <value>
                    <fullName>ISO-2022-JP</fullName>
                </value>
                <value>
                    <fullName>EUC-JP</fullName>
                </value>
                <value>
                    <fullName>ks_c_5601-1987</fullName>
                </value>
                <value>
                    <fullName>Big5</fullName>
                </value>
                <value>
                    <fullName>GB2312</fullName>
                </value>
                <value>
                    <fullName>Big5-HKSCS</fullName>
                </value>
                <value>
                    <fullName>x-SJIS_0213</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailPreferencesAutoBccStayInTouch__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>EmailPreferencesAutoBccStayInTouch</externalDeveloperName>
        <label>AutoBccStayInTouch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailPreferencesAutoBcc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>EmailPreferencesAutoBcc</externalDeveloperName>
        <label>AutoBcc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailPreferencesStayInTouchReminder__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>EmailPreferencesStayInTouchReminder</externalDeveloperName>
        <label>StayInTouchReminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalDeveloperName>Email</externalDeveloperName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmployeeNumber__c</fullName>
        <externalDeveloperName>EmployeeNumber</externalDeveloperName>
        <label>Employee Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <externalDeveloperName>Extension</externalDeveloperName>
        <label>Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FederationIdentifier__c</fullName>
        <externalDeveloperName>FederationIdentifier</externalDeveloperName>
        <label>SAML Federation ID</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <externalDeveloperName>FirstName</externalDeveloperName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ForecastEnabled</externalDeveloperName>
        <label>Allow Forecasting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FullPhotoUrl__c</fullName>
        <externalDeveloperName>FullPhotoUrl</externalDeveloperName>
        <label>Url for full-sized Photo</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GeocodeAccuracy__c</fullName>
        <externalDeveloperName>GeocodeAccuracy</externalDeveloperName>
        <label>Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsActive</externalDeveloperName>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProfilePhotoActive__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsProfilePhotoActive</externalDeveloperName>
        <label>Has Profile Photo</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LanguageLocaleKey__c</fullName>
        <externalDeveloperName>LanguageLocaleKey</externalDeveloperName>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>sv</fullName>
                </value>
                <value>
                    <fullName>ko</fullName>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                </value>
                <value>
                    <fullName>da</fullName>
                </value>
                <value>
                    <fullName>th</fullName>
                </value>
                <value>
                    <fullName>fi</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>es_MX</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastLoginDate__c</fullName>
        <externalDeveloperName>LastLoginDate</externalDeveloperName>
        <label>Last Login</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <externalDeveloperName>LastName</externalDeveloperName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastPasswordChangeDate__c</fullName>
        <externalDeveloperName>LastPasswordChangeDate</externalDeveloperName>
        <label>Last Password Change or Reset</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Login_Time_c__c</fullName>
        <externalDeveloperName>Last_Login_Time__c</externalDeveloperName>
        <label>Last Login Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <externalDeveloperName>Latitude</externalDeveloperName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocaleSidKey__c</fullName>
        <externalDeveloperName>LocaleSidKey</externalDeveloperName>
        <label>Locale</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>sq_AL</fullName>
                </value>
                <value>
                    <fullName>ar_DZ</fullName>
                </value>
                <value>
                    <fullName>ar_BH</fullName>
                </value>
                <value>
                    <fullName>ar_EG</fullName>
                </value>
                <value>
                    <fullName>ar_IQ</fullName>
                </value>
                <value>
                    <fullName>ar_JO</fullName>
                </value>
                <value>
                    <fullName>ar_KW</fullName>
                </value>
                <value>
                    <fullName>ar_LB</fullName>
                </value>
                <value>
                    <fullName>ar_LY</fullName>
                </value>
                <value>
                    <fullName>ar_MA</fullName>
                </value>
                <value>
                    <fullName>ar_OM</fullName>
                </value>
                <value>
                    <fullName>ar_QA</fullName>
                </value>
                <value>
                    <fullName>ar_SA</fullName>
                </value>
                <value>
                    <fullName>ar_SD</fullName>
                </value>
                <value>
                    <fullName>ar_SY</fullName>
                </value>
                <value>
                    <fullName>ar_TN</fullName>
                </value>
                <value>
                    <fullName>ar_AE</fullName>
                </value>
                <value>
                    <fullName>ar_YE</fullName>
                </value>
                <value>
                    <fullName>hy_AM</fullName>
                </value>
                <value>
                    <fullName>az_AZ</fullName>
                </value>
                <value>
                    <fullName>eu_ES</fullName>
                </value>
                <value>
                    <fullName>be_BY</fullName>
                </value>
                <value>
                    <fullName>bn_BD</fullName>
                </value>
                <value>
                    <fullName>bs_BA</fullName>
                </value>
                <value>
                    <fullName>bg_BG</fullName>
                </value>
                <value>
                    <fullName>my_MM</fullName>
                </value>
                <value>
                    <fullName>ca_ES</fullName>
                </value>
                <value>
                    <fullName>zh_CN_PINYIN</fullName>
                </value>
                <value>
                    <fullName>zh_CN_STROKE</fullName>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <externalDeveloperName>Longitude</externalDeveloperName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ManagerId__c</fullName>
        <externalDeveloperName>ManagerId</externalDeveloperName>
        <label>Manager ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MediumBannerPhotoUrl__c</fullName>
        <externalDeveloperName>MediumBannerPhotoUrl</externalDeveloperName>
        <label>Url for Android banner photo</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MediumPhotoUrl__c</fullName>
        <externalDeveloperName>MediumPhotoUrl</externalDeveloperName>
        <label>Url for medium profile photo</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <externalDeveloperName>MobilePhone</externalDeveloperName>
        <label>Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Full Name</label>
        <length>121</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfflinePdaTrialExpirationDate__c</fullName>
        <externalDeveloperName>OfflinePdaTrialExpirationDate</externalDeveloperName>
        <label>Sales Anywhere Trial Expiration Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OfflineTrialExpirationDate__c</fullName>
        <externalDeveloperName>OfflineTrialExpirationDate</externalDeveloperName>
        <label>Offline Edition Trial Expiration Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OwneridText_c__c</fullName>
        <externalDeveloperName>OwneridText__c</externalDeveloperName>
        <label>OwneridText</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <externalDeveloperName>PostalCode</externalDeveloperName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileId__c</fullName>
        <externalDeveloperName>ProfileId</externalDeveloperName>
        <label>Profile ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_License_Type_c__c</fullName>
        <externalDeveloperName>Profile_License_Type__c</externalDeveloperName>
        <label>Profile License Type</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReceivesAdminInfoEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ReceivesAdminInfoEmails</externalDeveloperName>
        <label>Admin Info Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReceivesInfoEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ReceivesInfoEmails</externalDeveloperName>
        <label>Info Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SenderEmail__c</fullName>
        <externalDeveloperName>SenderEmail</externalDeveloperName>
        <label>Email Sender Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SenderName__c</fullName>
        <externalDeveloperName>SenderName</externalDeveloperName>
        <label>Email Sender Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <externalDeveloperName>Signature</externalDeveloperName>
        <label>Email Signature</label>
        <length>1333</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SmallBannerPhotoUrl__c</fullName>
        <externalDeveloperName>SmallBannerPhotoUrl</externalDeveloperName>
        <label>Url for IOS banner photo</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SmallPhotoUrl__c</fullName>
        <externalDeveloperName>SmallPhotoUrl</externalDeveloperName>
        <label>Photo</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <externalDeveloperName>State</externalDeveloperName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StayInTouchNote__c</fullName>
        <externalDeveloperName>StayInTouchNote</externalDeveloperName>
        <label>Stay-in-Touch Email Note</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StayInTouchSignature__c</fullName>
        <externalDeveloperName>StayInTouchSignature</externalDeveloperName>
        <label>Stay-in-Touch Email Signature</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StayInTouchSubject__c</fullName>
        <externalDeveloperName>StayInTouchSubject</externalDeveloperName>
        <label>Stay-in-Touch Email Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <externalDeveloperName>Street</externalDeveloperName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TimeZoneSidKey__c</fullName>
        <externalDeveloperName>TimeZoneSidKey</externalDeveloperName>
        <label>Time Zone</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Ho_Chi_Minh</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>Asia/Dhaka</fullName>
                </value>
                <value>
                    <fullName>Asia/Kathmandu</fullName>
                </value>
                <value>
                    <fullName>Asia/Colombo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPermissionsAvantgoUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsAvantgoUser</externalDeveloperName>
        <label>AvantGo User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsCallCenterAutoLogin__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsCallCenterAutoLogin</externalDeveloperName>
        <label>Auto-login To Call Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsChatterAnswersUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsChatterAnswersUser</externalDeveloperName>
        <label>Chatter Answers User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsInteractionUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsInteractionUser</externalDeveloperName>
        <label>Force.com Flow User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsKnowledgeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsKnowledgeUser</externalDeveloperName>
        <label>Knowledge User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsMarketingUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsMarketingUser</externalDeveloperName>
        <label>Marketing User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsMobileUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsMobileUser</externalDeveloperName>
        <label>Apex Mobile User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsOfflineUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsOfflineUser</externalDeveloperName>
        <label>Offline User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPermissionsSFContentUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsSFContentUser</externalDeveloperName>
        <label>Salesforce CRM Content User</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>